--- a/commons-scm/pom.xml
+++ b/commons-scm/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>commons-parent</artifactId>
         <groupId>com.hb0730</groupId>
-        <version>2.1.2-RELEASE</version>
+        <version>2.1.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
