--- a/.github/workflows/commons.yml
+++ b/.github/workflows/commons.yml
@@ -64,25 +64,25 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: |
-          mvn clean package -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-          mvn cobertura:cobertura -Dcobertura.report.format=xml -Dmaven.javadoc.skip.true -Dorg.slf4j.simpleLogger.defaultLogLevel=error
+        run: mvn install -Dmaven.javadoc.skip=true -B -V
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
+        with:
+          file: ./*/target/site/jacoco/jacoco.xml
   codacy-analysis-cli:
-     name: Codacy Analysis CLI
-     runs-on: ubuntu-latest
-     needs: codecov
-     steps:
-       - name: Checkout code
-         uses: actions/checkout@v2
-       - name: Run Codacy Analysis CLI
-         uses: codacy/codacy-analysis-cli-action@1.1.0
-         with:
-           project-token: ${{secrets.CODACY_PROJECT_TOKEN}}
-           verbose: true
-           upload: true
-           max-allowed-issues: 2147483647
+    name: Codacy Analysis CLI
+    runs-on: ubuntu-latest
+    needs: codecov
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run Codacy Analysis CLI
+        uses: codacy/codacy-analysis-cli-action@1.1.0
+        with:
+          project-token: ${{secrets.CODACY_PROJECT_TOKEN}}
+          verbose: true
+          upload: true
+          max-allowed-issues: 2147483647
 
   github-release:
     runs-on: ubuntu-latest
