--- a/commons-scm/pom.xml
+++ b/commons-scm/pom.xml
@@ -30,5 +30,10 @@
             <artifactId>commons-lang</artifactId>
             <version>${version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
