--- a/commons-ssh/pom.xml
+++ b/commons-ssh/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>commons-lang</artifactId>
             <version>${version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
