--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Set up JDK ${{matrix.java}}
         uses: actions/setup-java@v2
         with:
-          distribution: 'Zulu'
+          distribution: 'zulu'
           java-version: ${{matrix.java}}
       - name: Cache Maven
         uses: actions/cache@v2
