--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -21,12 +21,12 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: mvn javadoc:aggregate clean package -DskipTests=true -B -V
+        run: mvn clean -DskipTests=true javadoc:aggregate
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{secrets.JAVADOCS_SYNC}}
           external_repository: hb0730/commons-docs
-          publish_dir: ./target/site/apidocs/
+          publish_dir: ./target/site/apidocs
           cname: api.commons.hb0730.com
 
