--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,32 @@ on:
 jobs:
   github-release:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ 8 ]
     if: ${{contains(github.ref,'tags')}}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up JDK ${{matrix.java}}
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: ${{matrix.java}}
+      - name: Cache Maven
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('pom.xml') }}
+          restore-keys: ${{ runner.os }}-maven-
+      - name: Build with Maven
+        run: mvn clean -DskipTests=true javadoc:aggregate
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{secrets.JAVADOCS_SYNC}}
+          external_repository: hb0730/commons-docs
+          publish_dir: ./target/site/apidocs
       - uses: actions/checkout@v2
       - name: Upload Github Release
         uses: meeDamian/github-release@2.0
